# grader-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  README.rst  RELEASE.md  index.yaml  pyproject.toml  requirements-docs.txt  requirements-test.txt
.github/workflows/: action_main.yml  build-labextension.yml  build-service.yml  build.yml  cleanup-images.yml  docker-labextension.yml  docker-service.yml  docker.yml  docs-service.yml  docs.yml  integration.yml  k8s_chart.yaml  main.yml  publish-helm.yml  publish-labextension.yml  publish-service.yml  publish_helm.yml  publish_service.yml  test-labextension.yml  test-service.yml
api-tests/: base-url-request.bru  bruno.json  collection.bru
api-tests/git/: git-receive-pack.bru
api-tests/no-auth/: invalid-auth-token.bru  no-auth-header.bru
api-tests/ui/: render-login-page.bru
charts/grader-service/: Chart.yaml  pyproject.toml  values.yaml
charts/grader-service-all-in-one/: Chart.yaml  README.md  values.yaml
dev/docker-compose/: .env.example  Dockerfile-hub  Dockerfile-labextension  Dockerfile-service  Dockerfile-test  README.md  docker-compose.yml  entrypoint-labextension.sh  get_service_token.sh  jupyterhub_config.py  write_token.py
docs/: Introduction to Python.ipynb  Makefile  ReadMe.md  docs-requirements.txt  instructor_workflow.dotuml
docs/source/: about.md  changelog.md  conf.py  contribution.md  grader_service.md  index.md  instructor_guide.md  student_guide.md
examples/dev_environment/: clean.sh  grader_service_config.py  grader_service_config_test.py  install.sh  jupyterhub_config.py  jupyterhub_config_test.py  run_hub.sh
examples/docker_compose/: Dockerfile-DBInit  Dockerfile-Hub  Dockerfile-Service  (+10 more)
grader_service/: _version.py  alembic_test.ini  errors.py  main.py  registry.py  request.py  server.py  utils.py
(+260 files in other folders)
