[project]
name = "grader-monorepo"
version = "0.0.0"
description = "Monorepo for Grader Service and Labextension"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9"

[tool.uv.workspace]
members = ["packages/service", "packages/labextension"]

[tool.uv]
default-groups = ["dev", "docs"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.2",
    "jupyterlab",
    "jupyter-builder",
]
docs = [
    "sphinx",
    "sphinx_book_theme",
    "myst-parser",
    "numpydoc",
    "sphinx_design",
    "ablog",
    "myst_nb",
    "sphinx_examples",
    "sphinx_tabs",
    "sphinx_thebe",
    "sphinx_togglebutton",
    "sphinxcontrib.bibtex",
    "autodoc-traits",
    "sphinx-autobuild",

]
