[project]
name = "grader-monorepo"
version = "0.0.0"
description = "Monorepo for Grader Service and Labextension"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9"

[tool.uv.workspace]
members = ["packages/service", "packages/labextension"]

[tool.uv]
default-groups = ["dev", "docs"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.2",
    "jupyterlab",
    "jupyter-builder",
    "tbump",
]
docs = [
    "sphinx",
    "sphinx_book_theme",
    "myst-parser",
    "numpydoc",
    "sphinx_design",
    "ablog",
    "myst_nb",
    "sphinx_examples",
    "sphinx_tabs",
    "sphinx_thebe",
    "sphinx_togglebutton",
    "sphinxcontrib.bibtex",
    "autodoc-traits",
    "sphinx-autobuild",

]

[tool.ruff]
line-length = 100
extend-exclude = [
    "**/*.ipynb",
]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
# Ignore `F821` ("Undefined name `c`") in config files with lines like `c.GraderService.db_url = ...`
"*_config.py" = ["F821"]
